--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keg Tracker</title>
+  <title>Keg Tracker Professional</title>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChOiFA_ghDfHOp-NxvS0G6Ga8RXCkvqvo" 
+    type="text/javascript"></script>
 </head>
 <body>
   <app-root></app-root>
